--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,9 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #c3defa;
   --foreground: #171717;
+  --font-main: var(--font-fredoka), Arial, Helvetica, sans-serif;
 }
 
 @theme inline {
@@ -22,5 +23,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-fredoka), Arial, Helvetica, sans-serif;
 }
